# Genesis

./: .gitignore  README.md  api.py  hehe.py  index.py  next.config.ts  package.json  pnpm-lock.yaml  presentation_full.pptx  pyproject.toml  run.ps1  script.py
docs/: DEPLOYMENT.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
src/app/: globals.css  layout.tsx  page.tsx
zen-next/: DEMO_SCRIPT.md  package.json  pnpm-lock.yaml
zen-next/src/app/: layout.tsx  page.tsx
