[project]
name = "agentic-ai"
version = "0.1.0"
description = "Autonomous Deep Research Agent - Unified Stack"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "ipython>=9.12.0",
    "langchain>=1.2.15",
    "langchain-groq>=1.1.2",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.1.6",
    "langsmith>=0.7.25",
    "python-dotenv>=1.2.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "langchain-google-genai>=2.0.0",
    "orjson>=3.10.0",
]

[project.scripts]
app = "index:app"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
